# PythonGAssignment

./: README.md  Streamlit_Guide.md  Technical_Guide.md  pyproject.toml
notebooks/: EDA1.ipynb  Timeseries_EDA.ipynb  model.ipynb  trial model.ipynb
project_energy/: __init__.py  __main__.py
project_energy/CLI/: CLItest.py  EDA.py  __init__.py  corrmatrix.py  database_session.py  hist.py  plot_predictions.py  predict.py  pricemonth.py  pricevsfeatures.py  sarima.py  sarima2.py  train_model.py
project_energy/model/: ML_Model.py
project_energy/pre_processing/: data_cleaning.py  database_session.py  feature_engineering.py
project_energy/webpageSL/: Streamlit_code.py  config.toml
