[tool.poetry]
name = "group-assignment"
version = "0.1.0"
description = ""
authors = ["jprodriguez97 <jprodriguez97@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.3.0"
pandas = "^2.2.1"
typer = "^0.9.0"
scikit-learn = "^1.4.1.post1"
sqlalchemy = "^2.0.28"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
