[tool.poetry]
name = "group-assignment"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
ruff = "^0.3.3"
pandas = "^2.2.1"
typer = "^0.9.0"
scikit-learn = "^1.4.1.post1"
sqlalchemy = "^2.0.28"
opencv-python = "^4.9.0.80"
matplotlib = "^3.8.3"
catboost = "^1.2.3"
lightgbm = "^4.3.0"
xgboost = "^2.0.3"
statsmodels = "^0.14.1"
seaborn = "^0.13.2"
pmdarima = "^2.0.4"
streamlit = "^1.32.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
